--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "CMakeLists.txt",
     "prebuilds"
   ],
+  "addon": {
+    "target": "bare-hrtime"
+  },
   "scripts": {
     "test": "standard && bare test.js"
   },
