--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bare-hrtime",
-  "version": "2.0.6-0",
+  "version": "2.0.6",
   "description": "High-resolution timers for JavaScript",
   "main": "index.js",
   "files": [
