Switch to `bare-make`

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/holepunchto/bare-hrtime#readme",
   "devDependencies": {
     "brittle": "^3.2.1",
+    "cmake-bare": "^1.1.6",
     "standard": "^17.0.0"
   }
 }
