--- a/package.json
+++ b/package.json
@@ -2,9 +2,16 @@
   "name": "bare-hrtime",
   "version": "2.0.10",
   "description": "High-resolution timers for JavaScript",
-  "main": "index.js",
+  "exports": {
+    ".": {
+      "types": "./index.d.ts",
+      "default": "./index.js"
+    },
+    "./package": "./package.json"
+  },
   "files": [
     "index.js",
+    "index.d.ts",
     "binding.c",
     "binding.js",
     "CMakeLists.txt",
