--- a/package.json
+++ b/package.json
@@ -2,9 +2,16 @@
   "name": "bare-hrtime",
   "version": "2.0.10",
   "description": "High-resolution timers for JavaScript",
-  "main": "index.js",
+  "exports": {
+    ".": {
+      "types": "./index.d.ts",
+      "default": "./index.js"
+    },
+    "./package": "./package.json"
+  },
   "files": [
     "index.js",
+    "index.d.ts",
     "binding.c",
     "binding.js",
     "CMakeLists.txt",
@@ -12,7 +19,7 @@
   ],
   "addon": true,
   "scripts": {
-    "test": "standard && bare test.js"
+    "test": "prettier . --check && bare test.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +34,7 @@
   "devDependencies": {
     "brittle": "^3.2.1",
     "cmake-bare": "^1.1.6",
-    "standard": "^17.0.0"
+    "prettier": "^3.4.2",
+    "prettier-config-standard": "^7.0.0"
   }
 }
