--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bare-hrtime",
-  "version": "2.1.0-0",
+  "version": "2.1.0",
   "description": "High-resolution timers for JavaScript",
   "exports": {
     ".": {
